fix: set z-index: 3 for searchWidget

--- a/src/components/searchSortWidget/searchSortWidget.module.css
+++ b/src/components/searchSortWidget/searchSortWidget.module.css
@@ -9,6 +9,7 @@
   background-color: rgb(244, 244, 244);
   padding: 4px;
   border-radius: 8px;
+  z-index: 3;
 }
 
 @media (min-width: 320px) {
